[Wayland] Sharing indicator is in new window
Categories
(Core :: Widget: Gtk, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox90 | --- | verified |
People
(Reporter: jan.public, Assigned: stransky)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:87.0) Gecko/20100101 Firefox/87.0
Steps to reproduce:
- On a system with microphone and webcam attached on a GNOME Wayland session go to https://meet.jit.si and open a meeting.
- Firefox asks for permission to use the microphone and webcam.
- Grant permission
Actual results:
A small new Firefox windows appears with the title Firefox - Sharing Indicator. This small window shows that the camera and microphone are in use.
Expected results:
The sharing indicator should appear on top of the desktop (or somewhere else) but preferably not in a new window that sometimes get out if sight behind other windows. In Xorg the indicator is visible at the top of the window or desktop.
See also bug 1628431.
I attached a screenshot of the small Sharing Indicator window. Note that it is also partially transparent. When this window is resized the transparency disappears.
Comment 3•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Comment 4•4 years ago
|
||
I believe this could be a duplicate of bug #1628431.
Comment 5•4 years ago
|
||
Also reported downstream in Ubuntu (Ubuntu 21.04, released last week, ships with a Wayland session by default): https://bugs.launchpad.net/firefox/+bug/1925837
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 6•4 years ago
|
||
Updated•4 years ago
|
Comment 8•4 years ago
|
||
| bugherder | ||
Comment 9•4 years ago
|
||
(In reply to Pulsebot from comment #7)
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/1f8208b4e636
[Wayland] Emulate X11 popup parentless window as a toplevel on Wayland,
r=jhorak
Thanks, Martin! Does this mean bug #1628431 is also fixed?
| Assignee | ||
Comment 10•4 years ago
|
||
(In reply to devurandom from comment #9)
(In reply to Pulsebot from comment #7)
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/1f8208b4e636
[Wayland] Emulate X11 popup parentless window as a toplevel on Wayland,
r=jhorakThanks, Martin! Does this mean bug #1628431 is also fixed?
Please try that. The windows is still created as toplevel but it has disabled decorations. We can't create it as popup as it does not have a parent window. Bug 1703073 will have huge popup redesign and we should apply correct popup roles when it's fixed.
Updated•4 years ago
|
Comment 11•4 years ago
|
||
I was able to reproduce the window issue on Firefox 87.0b5 wayland session under Ubuntu 20.04 by following the info provided in Comment 0.
The issue is fixed and the indicator appeared on the left side of the screen on Firefox 90.0b5 on the same system.
Comment 12•4 years ago
|
||
I wonder if it makes more sense to expose the sharing state and controls via DBus and let the desktop environment handle displaying an indicator.
That would solve this issue entirely. Currently there is no universal way for Wayland clients to directly position views (layer-shell does it but is but non-standardized), but with a DBus interface, the desktop can take of this in a way that fits better into the environment. As an example, the desktop could show the indicator as a new widget visually similar to what Firefox does on non-Wayland desktops, or it could also place it into the status area of the panel.
Description
•