Bug 1705048 [Wayland] Emulate X11 popup parentless window as a toplevel on Wayland, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D114232