widget/gtk/nsWindow.cpp
@@ -460,6 +460,7 @@ nsWindow::nsWindow()
       mDrawInTitlebar(false),
       mTitlebarBackdropState(false),
       mIsPIPWindow(false),
+      mIsWaylandPanelWindow(false),
       mAlwaysOnTop(false),
       mIsTransparent(false),
       mTransparencyBitmap(nullptr),
@@ -3684,7 +3685,8 @@ void nsWindow::OnButtonPressEvent(GdkEventButton* aEvent) {
 
   LayoutDeviceIntPoint refPoint =
       GdkEventCoordsToDevicePixels(aEvent->x, aEvent->y);
-  if (mDraggableRegion.Contains(refPoint.x, refPoint.y) &&
+  if ((mIsWaylandPanelWindow ||
+       mDraggableRegion.Contains(refPoint.x, refPoint.y)) &&
       domButton == MouseButton::ePrimary &&
       eventStatus.mContentStatus != nsEventStatus_eConsumeNoDefault) {
     mWindowShouldStartDragging = true;
@@ -4632,8 +4634,9 @@ nsresult nsWindow::Create(nsIWidget* aParent, nsNativeWidget aNativeParent,
       // as a workaround.
       mWindowType = eWindowType_toplevel;
     } else if (mWindowType == eWindowType_popup && !aNativeParent && !aParent) {
-      // Workaround for Wayland where the popup windows always need to have
-      // parent window. For example webrtc ui is a popup window without parent.
+      // mIsWaylandPanelWindow is a special toplevel window on Wayland which
+      // emulates X11 popup window without parent.
+      mIsWaylandPanelWindow = true;
       mWindowType = eWindowType_toplevel;
     }
   }
@@ -4661,9 +4664,10 @@ nsresult nsWindow::Create(nsIWidget* aParent, nsNativeWidget aNativeParent,
       GtkWindowType type = GTK_WINDOW_TOPLEVEL;
       if (mWindowType == eWindowType_popup) {
         MOZ_ASSERT(aInitData);
-        type = (GdkIsX11Display() && aInitData->mNoAutoHide)
-                   ? GTK_WINDOW_TOPLEVEL
-                   : GTK_WINDOW_POPUP;
+        type = GTK_WINDOW_POPUP;
+        if (GdkIsX11Display() && aInitData->mNoAutoHide) {
+          type = GTK_WINDOW_TOPLEVEL;
+        }
       }
       mShell = gtk_window_new(type);
 
@@ -4913,6 +4917,10 @@ nsresult nsWindow::Create(nsIWidget* aParent, nsNativeWidget aNativeParent,
         MaybeResumeCompositor();
       }
 #endif
+
+      if (mIsWaylandPanelWindow) {
+        gtk_window_set_decorated(GTK_WINDOW(mShell), false);
+      }
 
       if (mWindowType == eWindowType_popup) {
         MOZ_ASSERT(aInitData);
